syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "billboard.service";
option java_outer_classname = "BizProto";

package biz;

message BizReply {
  string data = 1;
}

service Candidate {
  rpc filter (CandidateFilterRequest) returns (BizReply) {}
  rpc get (CandidateGetRequest) returns (BizReply) {}
  rpc statistic (CandidateStatisticRequest) returns (BizReply) {}
}

message CandidateFilterRequest {
  string option = 1;
  map<string, string> data = 2;
}

message CandidateGetRequest {
  uint32 id = 1;
  string uuid = 2;
}

message CandidateStatisticRequest {
  string option = 1;
  map<string, string> data = 2;
}

service Employer {
  rpc filter(EmployerFilterRequest) returns (BizReply) {}
  rpc filterUser(EmployerFilterUserRequest) returns (BizReply) {}
  rpc statistic(EmployerStatisticRequest) returns (BizReply) {}
  rpc get(EmployerGetRequest) returns (BizReply) {}
  rpc check(EmployerCheckRequest) returns (BizReply) {}
  rpc update(EmployerUpdateRequest) returns (BizReply) {}
  rpc subject(EmployerSubjectRequest) returns (BizReply) {}
  rpc jobFairList(EmployerJobFairListRequest) returns (BizReply) {}
  rpc signUp(EmployerSignUpRequest) returns (BizReply) {}
  rpc signIn(EmployerSignInRequest) returns (BizReply) {}
  rpc updateUser(EmployerUpdateUserRequest) returns (BizReply) {}
  rpc updatePassword(EmployerUpdatePasswordRequest) returns (BizReply) {}
  rpc upPasswordCheck(EmployerUpPasswordCheckRequest) returns (BizReply) {}
  rpc recover(EmployerRecoverRequest) returns (BizReply) {}
  rpc checkEmail(EmployerCheckEmailRequest) returns (BizReply) {}
  rpc checkPhone(EmployerCheckPhoneRequest) returns (BizReply) {}
  rpc checkRecover(EmployerCheckRecoverRequest) returns (BizReply) {}
}

message EmployerFilterRequest {
  string option = 1;
  map<string, string> data = 2;
}

message EmployerFilterUserRequest {
  string option = 1;
  map<string, string> data = 2;
}

message EmployerStatisticRequest {
  string option = 1;
  map<string, string> data = 2;
}

message EmployerGetRequest {
  uint32 id = 1;
  string uuid = 2;
}

message EmployerCheckRequest {
  uint32 id = 1;
  string uuid = 2;
}

message EmployerUpdateRequest {
  string yingyezhizhao = 1;
  string faren = 2;
  string zhuceriqi = 3;
  string zhuziguimo = 4;
  string yuangongshuliang = 5;
  string yingyezhizhao_tu = 6;
  string phone = 7;
  string address1 = 8;
  string address2 = 9;
  string address3 = 10;
  string address4 = 11;
  string industry = 12;
  string intro = 13;
  string url = 14;
  uint32 id = 15;
  string uuid = 16;
}

message EmployerSubjectRequest {
  string name = 1;
}

message EmployerJobFairListRequest {
  uint32 job_fair_id = 1;
}

message EmployerSignUpRequest {
  string code = 1;
  string email = 2;
  string ent_name = 3;
  string password = 4;
  string salt = 5;
}

message EmployerSignInRequest {
  string phone_email = 1;
  string password = 2;
  string ip = 3;
  string address = 4;
}

message EmployerRecoverRequest {
  string user_category = 1;
  string code = 2;
  string email =3;
  string password = 4;
}

message EmployerUpPasswordCheckRequest {
  uint32 id = 3;
  string uuid = 4;
}

message EmployerUpdatePasswordRequest {
  string password =1;
  string salt = 2;
  uint32 id = 3;
  string uuid = 4;
}

message EmployerUpdateUserRequest {
  string code = 1;
  string email = 2;
  string phone = 3;
  uint32 id = 4;
  string uuid = 5;
}

message EmployerCheckPhoneRequest {
  uint32 id = 1;
  string phone = 2;
}

message EmployerCheckEmailRequest {
  uint32 id = 1;
  string email = 2;
}

message EmployerCheckRecoverRequest {
  string email = 1;
}

service Interview {
  rpc entList(InterviewEntListRequest) returns (BizReply) {}
  rpc commonList(InterviewCommonListRequest) returns (BizReply) {}
  rpc commonTotal(InterviewCommonTotalRequest) returns (BizReply) {}
  rpc insert(InterviewInsertRequest) returns (BizReply) {}
}

message InterviewEntListRequest {
  uint32 id = 1;
}

message InterviewCommonListRequest {
  uint32 id = 1;
}

message InterviewCommonTotalRequest {
  uint32 id = 1;
}

message InterviewInsertRequest {
  uint32 recruitment_id = 1;
  uint32 common_user_id = 2;
  string address = 3;
  string mianshishijian = 4;
  string luxian = 5;
  string remark = 6;
  string phone1 = 7;
  string phone2 = 8;
}

service Job {
  rpc statistic(JobStatisticRequest) returns (BizReply) {}
  rpc filter(JobFilterRequest) returns (BizReply) {}
  rpc save(JobSaveRequest) returns (BizReply) {}
  rpc get(JobGetRequest) returns (BizReply) {}
  rpc update(JobUpdateRequest) returns (google.protobuf.Empty) {}
  rpc enterpriseList(JobEnterpriseListRequest) returns (BizReply) {}
  rpc enterpriseSearch(JobEnterpriseSearchRequest) returns (BizReply) {}
  rpc subject(JobSubjectRequest) returns (BizReply) {}
  rpc jobFairEntList(JobFairEntListRequest) returns (BizReply) {}
  rpc jobFairList(JobFairListRequest) returns (BizReply) {}
}

message JobUpdateRequest {
  string option = 1;
  map<string, string> data = 2;
}

message JobStatisticRequest {
  string option = 1;
  map<string, string> data = 2;
}

message JobGetRequest {
  uint32 id = 1;
  string uuid = 2;
}

message JobListRequest {}

message JobFilterRequest {
  string category = 1;
  map<string, string> param = 2;
}

message JobSaveRequest {
  uint32 enterprise_id = 1;
  string enterprise_uuid = 2;
  string name = 3;
  string qty = 4;
  string description = 5;
  string requirement = 6;
  string address1 = 7;
  string address2 = 8;
  string address3 = 9;
  string salary1 = 10;
  string salary2 = 11;
  string education = 12;
  string category = 13;
  string industry = 14;
  string position = 15;
}

message JobEnterpriseListRequest {
  uint32 id = 1;
  string uuid = 2;
}

message JobEnterpriseSearchRequest {
  string enterprise_id = 1;
  string uuid = 2;
  string name = 3;
  string category = 4;
  string date = 5;
  string status = 6;
  string education = 7;
}

message JobSubjectRequest {
  string subject = 1;
}

message JobFairEntListRequest {
  uint32 job_fair_id = 1;
  uint32 ent_id = 2;
  string ent_uuid = 3;
}

message JobFairListRequest {
  uint32 job_fair_id = 1;
}

service Resume2102 {
  rpc init (Resume2102InitRequest) returns (BizReply) {}
  rpc filter (Resume2102FilterRequest) returns (BizReply) {}
  rpc get (Resume2102GetRequest) returns (BizReply) {}
  rpc update (Resume2102UpdateRequest) returns (google.protobuf.Empty) {}
}

message Resume2102InitRequest {
  uint32 candidate_id = 1;
}

message Resume2102FilterRequest {
  string filter = 1;
  map<string, string> param = 2;
}

message Resume2102GetRequest {
  string option = 1;
  map<string, string> param = 2;
}

message Resume2102UpdateRequest {
  string option = 1;
  map<string, string> param = 2;
}

service SendIn {
  rpc statistic (SendInStatisticRequest) returns (BizReply) {}
}

message SendInStatisticRequest {
  string option = 1;
  map<string, string> data = 2;
}
